modify photoType file's name in images &modify style.css file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/style.css">
-	<title>DEMO</title>
+	<title>页面自适应</title>
 </head>
 <body>
 	<section class="banner">
@@ -13,15 +13,16 @@
 	<section class="main">
 		<div class="tab">
 			<ul>
-				<li class="curr">欢乐游记</li>
+				<li>欢乐游记</li>
 				<li>早读上海</li>
-				<li>直击现场</li>
+				<li class="curr">直击现场</li>
 			</ul>
 		</div>	
 		<div class="list">
-			<dl class="l_list" style="display: block;">
+			<dl class="l_list">
 				<dd>
-					<div class="pic" style="background-image:url(http://img-ossimg.ajmide.com/upload/201609/23/17632-1BNg1h_1280x960.jpg@300w_300h_l1_90q.jpg)">
+					<div class="pic">
+						<img src="images/l_00.png">
 						<div class="btn play"></div>
 					</div>
 					<div class="text">
@@ -59,10 +60,10 @@
 					<img src="images/1.jpg">
 				</dd>
 			</dl>
-			<dl class="r_list" >
+			<dl class="r_list" style="display: block;">
 				<dd>
 				<div class="pic">
-						<img src="images/logo.png">
+						<img src="images/lo02.png">
 						<i class="btn play"></i>
 					</div>
 					<div class="text">
@@ -76,7 +77,7 @@
 				</dd>
 				<dd>
 					<div class="pic">
-						<img src="images/logo.png">
+						<img src="images/lo01.png">
 						<i class="btn play"></i>
 					</div>
 					<div class="text">
